--- a/templates/list_all_movies.html
+++ b/templates/list_all_movies.html
@@ -5,5 +5,24 @@
 {% block body %}
 <h1 class="mb-5">All Movies</h1>
 <p class="mb-3">See our list of movie ratings below</p>
-<!-- TODO: Feature 1 -->
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Movie</th>
+        <th scope="col">Director</th>
+        <th scope="col">Rating</th>
+      </tr>
+    </thead>
+    <tbody>
+        {% for movie in movie_list %}
+            <tr>
+                <td id="num" name = "num"> {{ loop.index }} </td>
+                <td id="movie" name = "movie"> {{ movie.title }} </td>
+                <td id="director" name = "director"> {{ movie.director }} </td>
+                <td id="rating" name = "rating"> {{ movie.rating }} </td>
+            </tr>
+        {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
