--- a/templates/create_movies_form.html
+++ b/templates/create_movies_form.html
@@ -2,8 +2,38 @@
 
 {% block title %}Movie Rating App | Create Movie Rating{% endblock %}
 
+
 {% block body %}
 <h1 class="mb-5">Create Movie Rating</h1>
 <p class="mb-3">Create a movie rating below</p>
 <!-- TODO: Feature 2 -->
+<form action="/movies" method="post">
+    <div class="form-group">
+        <label for="movie_name">Movie Name</label>
+        <input type="text" class="form-control" id="movie_name" placeholder="Movie Name">
+    </div>
+
+    <div class="form-group">
+        <label for="movie_director">Movie Director</label>
+        <input type="text" class="form-control" id="movie_director" placeholder="Movie Director">
+    </div>
+
+    <div class="form-group">
+        <label for="movie_rating">Movie Rating from 1-5</label>
+        <select class="form-control" id="movie_rating">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Submit Movie</button>
+
+</form>
 {% endblock %}
+
+
+<!--Source: https://www.w3schools.com/html/html_forms.asp-->
+<!--Source: https://www.w3schools.com/html/html_form_elements.asp-->
