fixed create_movies feature

--- a/templates/create_movies_form.html
+++ b/templates/create_movies_form.html
@@ -10,17 +10,17 @@
 <form action="/movies" method="post">
     <div class="form-group">
         <label for="movie_name">Movie Name</label>
-        <input type="text" class="form-control" id="movie_name" placeholder="Movie Name">
+        <input type="text" class="form-control" id="movie_name" name="movie_name" placeholder="Movie Name">
     </div>
 
     <div class="form-group">
         <label for="movie_director">Movie Director</label>
-        <input type="text" class="form-control" id="movie_director" placeholder="Movie Director">
+        <input type="text" class="form-control" id="movie_director" name="movie_director" placeholder="Movie Director">
     </div>
 
     <div class="form-group">
         <label for="movie_rating">Movie Rating from 1-5</label>
-        <select class="form-control" id="movie_rating">
+        <select class="form-control" id="movie_rating" name="movie_rating">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
